[tool.poetry]
name = "fillfdb"
version = "0.1.0"
description = ""
authors = ["Yannick Koehler <ykoehler@arubanetworks.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
scapy = "^2.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
